--- a/src/main/webapp/pages/ViewCase/ViewCase.html
+++ b/src/main/webapp/pages/ViewCase/ViewCase.html
@@ -113,7 +113,7 @@
                                 <wm-tabpane name="tabpaneLETTERS" title="LETTERS"></wm-tabpane>
                                 <wm-tabpane name="tabpaneMessages" title="MESSAGES"></wm-tabpane>
                                 <wm-tabpane name="tabpaneHistory" title="HISTORY"></wm-tabpane>
-                                <wm-tabpane name="tabpaneNOTES" title="INTERNAL"></wm-tabpane>
+                                <wm-tabpane name="tabpaneNOTES" title="INTERNAL" accessroles="CXAdmin,MunicipalityEmployee,MunicipalityAdmin"></wm-tabpane>
                             </wm-tabs>
                         </wm-panel>
                     </wm-gridcolumn>
