--- a/src/main/webapp/pages/ViewInspection/ViewInspection.html
+++ b/src/main/webapp/pages/ViewInspection/ViewInspection.html
@@ -111,7 +111,7 @@
                                 <wm-tabpane name="tabpaneCodeEnforment" title="CODE ENFORCEMENT" show="true"></wm-tabpane>
                                 <wm-tabpane name="tabpaneMessages" title="MESSAGES"></wm-tabpane>
                                 <wm-tabpane name="tabpaneHistory" title="HISTORY"></wm-tabpane>
-                                <wm-tabpane name="tabpaneINTERNAL" title="INTERNAL"></wm-tabpane>
+                                <wm-tabpane name="tabpaneINTERNAL" title="INTERNAL" accessroles="CXAdmin,MunicipalityAdmin,MunicipalityEmployee"></wm-tabpane>
                             </wm-tabs>
                         </wm-panel>
                     </wm-gridcolumn>
