- Added municipality logo to the signature document Files modified - [PdfUtilities.java,FormService.java,index.html,pom.xml,index.mobile.html,ESignGenieApi.java]

--- a/src/main/webapp/resources/leadTools/index.html
+++ b/src/main/webapp/resources/leadTools/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html ng-app="cx2LeadTools">
 
@@ -104,28 +103,20 @@
                 <li class="dropdown">
                     <a href="#" id="fileMenuItem" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">File <span class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
-                        <!-- Upload document -->
+                        <!-- Upload document
                         <li>
                             <button id="uploadDocument" class="menuItem" title="Upload local document...">
                                 <span class="icon icon-sm openIcon"></span>
                                 <span class="text">Upload document...</span>
                             </button>
-                        </li>
-                        <!-- Save/Convert document -->
+                        </li> -->
+                        <!-- Save/Convert document
                         <li>
                             <button id="saveDocument" class="menuItem" title="Save/Convert document...">
                                 <span class="icon icon-sm saveIcon"></span>
                                 <span class="text">Save...</span>
                             </button>
-                        </li>
-                        <!-- Close document -->
-                        <li>
-                            <button id="closeDocument" class="menuItem">
-                                <span class="icon icon-sm closeIcon"></span>
-                                <span class="text">Close</span>
-                            </button>
-                        </li>
-                        <li class="divider fileMenuDivider"></li>
+                        </li> -->
                         <!-- Export text -->
                         <li>
                             <button id="exportText" class="menuItem">
@@ -138,6 +129,14 @@
                             <button id="documentProperties" class="menuItem">
                                 <span class="icon icon-sm propertiesIcon"></span>
                                 <span class="text">Properties...</span>
+                            </button>
+                        </li>
+                        <li class="divider fileMenuDivider"></li>
+                        <!-- Close document -->
+                        <li>
+                            <button id="closeDocument" class="menuItem">
+                                <span class="icon icon-sm closeIcon"></span>
+                                <span class="text">Close</span>
                             </button>
                         </li>
                     </ul>
