--- a/src/main/webapp/resources/leadTools/index.mobile.html
+++ b/src/main/webapp/resources/leadTools/index.mobile.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html ng-app="cx2LeadTools">
 
@@ -141,13 +140,13 @@
                         <span class="text">Open from document storage...</span>
                     </button>
                 </li>
-                <!-- Save/Convert document -->
+                <!-- Save/Convert document
                 <li>
                     <button id="saveDocument" class="mainControlsItem menuItem">
                         <span class="icon icon-md saveIcon"></span>
                         <span class="text">Save...</span>
                     </button>
-                </li>
+                </li> -->
                 <!-- Close document -->
                 <li>
                     <button id="closeDocument" class="mainControlsItem menuItem">
