--- a/src/main/webapp/pages/MunicipalityUsers/MunicipalityUsers.html
+++ b/src/main/webapp/pages/MunicipalityUsers/MunicipalityUsers.html
@@ -53,7 +53,7 @@
                                                 shortcutkey="" disabled="false" icon="wi wi-plus"></wm-grid-action>
                                                 <wm-grid-row-action key="customRow1" display-name="" show="true" class="btn-transparent" iconclass="wi wi-people" title="Manage Groups" action="customRow1Action($event);Variables.StateInformation.listRecords();Widgets.EmployeeDialog.open()"
                                                 disabled="false"></wm-grid-row-action>
-                                                <wm-grid-row-action key="customRow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="customRowAction($event);customRowAction1($event)"
+                                                <wm-grid-row-action key="customRow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Remove Role" action="customRowAction($event);customRowAction1($event)"
                                                 disabled="false"></wm-grid-row-action>
                                             </wm-grid>
                                         </wm-gridcolumn>
@@ -61,7 +61,7 @@
                                     <wm-gridrow name="gridrow14"></wm-gridrow>
                                 </wm-layoutgrid>
                             </wm-tabpane>
-                            <wm-tabpane name="tabpaneInspector" title="Inspector">
+                            <wm-tabpane name="tabpaneInspector" title="Inspectors">
                                 <wm-layoutgrid name="layoutgrid4_1">
                                     <wm-gridrow name="gridrow13">
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn28">
@@ -76,7 +76,7 @@
                                                 shortcutkey="" disabled="false" icon="wi wi-plus"></wm-grid-action>
                                                 <wm-grid-row-action key="customRow1" display-name="" show="true" class="btn-transparent" iconclass="wi wi-people" title="Manage Groups" action="customRow1Action($event);Variables.StateInformation.listRecords();Widgets.EmployeeDialog.open()"
                                                 disabled="false"></wm-grid-row-action>
-                                                <wm-grid-row-action key="customRow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="customRowAction($event);customRowAction1($event)"
+                                                <wm-grid-row-action key="customRow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Remove Role" action="customRowAction($event);customRowAction1($event)"
                                                 disabled="false"></wm-grid-row-action>
                                             </wm-grid>
                                         </wm-gridcolumn>
@@ -84,7 +84,7 @@
                                     <wm-gridrow name="gridrow14"></wm-gridrow>
                                 </wm-layoutgrid>
                             </wm-tabpane>
-                            <wm-tabpane name="tabpaneInspectorManager" title="InspectorManager">
+                            <wm-tabpane name="tabpaneInspectorManager" title="Inspector Managers">
                                 <wm-layoutgrid name="layoutgrid4_1">
                                     <wm-gridrow name="gridrow13">
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn28">
@@ -95,18 +95,19 @@
                                                 <wm-grid-column binding="Email" caption="Email Address" type="string" readonly="true" edit-widget-type="text" show="true"></wm-grid-column>
                                                 <wm-grid-column binding="PhoneNumber" caption="Phone Number" type="string" readonly="true" edit-widget-type="text" show="true"></wm-grid-column>
                                                 <wm-grid-column binding="rowOperations" caption="Actions" type="custom" readonly="true" edit-widget-type="text" sortable="false" searchable="false" show="true"></wm-grid-column>
-                                                <wm-grid-action key="customButton" display-name="Add InspectorManager" show="true" class="btn-primary" iconclass="wi wi-plus" title="Add InspectorManager" action="customButtonAction($event);Widgets.dialogAddRole.open()"
+                                                <wm-grid-action key="customButton" display-name="Add Inspector Manager" show="true" class="btn-primary" iconclass="wi wi-plus" title="Add Inspector Manager" action="customButtonAction($event);Widgets.dialogAddRole.open()"
                                                 shortcutkey="" disabled="false" icon="wi wi-plus"></wm-grid-action>
                                                 <wm-grid-row-action key="customRow1" display-name="" show="true" class="btn-transparent" iconclass="wi wi-people" title="Manage Groups" action="customRow1Action($event);Variables.StateInformation.listRecords();Widgets.EmployeeDialog.open()"
                                                 disabled="false"></wm-grid-row-action>
-                                                <wm-grid-row-action key="customRow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="Variables.svDeleteInspectorManager.invoke()" disabled="false"></wm-grid-row-action>
+                                                <wm-grid-row-action key="customRow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Remove Role" action="Variables.svDeleteInspectorManager.invoke()"
+                                                disabled="false"></wm-grid-row-action>
                                             </wm-grid>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
                                     <wm-gridrow name="gridrow14"></wm-gridrow>
                                 </wm-layoutgrid>
                             </wm-tabpane>
-                            <wm-tabpane name="tabpaneCodeOfficer" title="CodeOfficer">
+                            <wm-tabpane name="tabpaneCodeOfficer" title="Code Officers">
                                 <wm-layoutgrid name="layoutgrid4_1">
                                     <wm-gridrow name="gridrow13">
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn28">
@@ -117,11 +118,11 @@
                                                 <wm-grid-column binding="Email" caption="Email Address" type="string" readonly="true" edit-widget-type="text" show="true"></wm-grid-column>
                                                 <wm-grid-column binding="PhoneNumber" caption="Phone Number" type="string" readonly="true" edit-widget-type="text" show="true"></wm-grid-column>
                                                 <wm-grid-column binding="rowOperations" caption="Actions" type="custom" readonly="true" edit-widget-type="text" sortable="false" searchable="false" show="true"></wm-grid-column>
-                                                <wm-grid-action key="customButton" display-name="Add CodeOfficer" show="true" class="btn-primary" iconclass="wi wi-plus" title="Add CodeOfficer" action="customButtonAction($event);Widgets.dialogAddRole.open()"
+                                                <wm-grid-action key="customButton" display-name="Add Code Officer" show="true" class="btn-primary" iconclass="wi wi-plus" title="Add Code Officer" action="customButtonAction($event);Widgets.dialogAddRole.open()"
                                                 shortcutkey="" disabled="false" icon="wi wi-plus"></wm-grid-action>
                                                 <wm-grid-row-action key="customRow1" display-name="" show="true" class="btn-transparent" iconclass="wi wi-people" title="Manage Groups" action="customRow1Action($event);Variables.StateInformation.listRecords();Widgets.EmployeeDialog.open()"
                                                 disabled="false"></wm-grid-row-action>
-                                                <wm-grid-row-action key="customRow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="customRowAction($event);customRowAction1($event)"
+                                                <wm-grid-row-action key="customRow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Remove Role" action="customRowAction($event);customRowAction1($event)"
                                                 disabled="false"></wm-grid-row-action>
                                             </wm-grid>
                                         </wm-gridcolumn>
@@ -129,7 +130,7 @@
                                     <wm-gridrow name="gridrow14"></wm-gridrow>
                                 </wm-layoutgrid>
                             </wm-tabpane>
-                            <wm-tabpane name="tabpaneCodeManager" title="CodeManager">
+                            <wm-tabpane name="tabpaneCodeManager" title="Code Managers">
                                 <wm-layoutgrid name="layoutgrid4_1">
                                     <wm-gridrow name="gridrow13">
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn28">
@@ -140,11 +141,11 @@
                                                 <wm-grid-column binding="Email" caption="Email Address" type="string" readonly="true" edit-widget-type="text" show="true"></wm-grid-column>
                                                 <wm-grid-column binding="PhoneNumber" caption="Phone Number" type="string" readonly="true" edit-widget-type="text" show="true"></wm-grid-column>
                                                 <wm-grid-column binding="rowOperations" caption="Actions" type="custom" readonly="true" edit-widget-type="text" sortable="false" searchable="false" show="true"></wm-grid-column>
-                                                <wm-grid-action key="customButton" display-name="Add CodeManager" show="true" class="btn-primary" iconclass="wi wi-plus" title="Add CodeManager" action="customButtonAction($event);Widgets.dialogAddRole.open()"
+                                                <wm-grid-action key="customButton" display-name="Add Code Manager" show="true" class="btn-primary" iconclass="wi wi-plus" title="Add Code Manager" action="customButtonAction($event);Widgets.dialogAddRole.open()"
                                                 shortcutkey="" disabled="false" icon="wi wi-plus"></wm-grid-action>
                                                 <wm-grid-row-action key="customRow1" display-name="" show="true" class="btn-transparent" iconclass="wi wi-people" title="Manage Groups" action="customRow1Action($event);Variables.StateInformation.listRecords();Widgets.EmployeeDialog.open()"
                                                 disabled="false"></wm-grid-row-action>
-                                                <wm-grid-row-action key="customRow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="Variables.svDeleteCodeManager.invoke()" disabled="false"></wm-grid-row-action>
+                                                <wm-grid-row-action key="customRow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Remove Role" action="Variables.svDeleteCodeManager.invoke()" disabled="false"></wm-grid-row-action>
                                             </wm-grid>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
@@ -165,7 +166,7 @@
                                                 <wm-grid-action key="customButton" display-name="Add Admin" show="true" class="btn-primary" iconclass="wi wi-plus" title="Add Admin" action="Widgets.dialogAddRole.open();customButtonAction2($event)"
                                                 shortcutkey="" disabled="false" icon="wi wi-plus"></wm-grid-action>
                                                 <wm-grid-row-action key="customRow1" display-name="" show="true" class="btn-transparent" iconclass="wi wi-people" title="Manage Groups" action="customRow1Action2($event)" disabled="false"></wm-grid-row-action>
-                                                <wm-grid-row-action key="customRow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="Variables.svDeleteAdminRole.invoke()" disabled="false"></wm-grid-row-action>
+                                                <wm-grid-row-action key="customRow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Remove Role" action="Variables.svDeleteAdminRole.invoke()" disabled="false"></wm-grid-row-action>
                                             </wm-grid>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
@@ -516,7 +517,7 @@
         </wm-dialog>
     </wm-view>
     <wm-view class="dialog-view" name="viewDeleteRoleConfrim">
-        <wm-dialog dialogtype="design-dialog" modal="true" title="bind:&quot;Delete &quot;+Variables.stvDeleteRole.dataSet.role" iconclass="wi wi-delete" name="dialogDeleteRoleConfrim">
+        <wm-dialog dialogtype="design-dialog" modal="true" title="bind:&quot;Remove &quot;+Variables.stvDeleteRole.dataSet.role" iconclass="wi wi-trash" name="dialogDeleteRoleConfrim">
             <wm-layoutgrid name="layoutgrid14">
                 <wm-gridrow name="gridrow43">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn74">
@@ -525,8 +526,8 @@
                 </wm-gridrow>
             </wm-layoutgrid>
             <wm-dialogactions name="dialogactions7">
-                <wm-button class="btn-primary" caption="Close" on-click="closeDialog()" name="buttonCloseDeleteRoleConfrim"></wm-button>
-                <wm-button class="btn-default" caption="Remove" type="button" margin="unset 0.5em" name="buttonProceedRoleDelete" on-click="buttonProceedRoleDeleteClick($event, $scope)"></wm-button>
+                <wm-button class="btn-primary" caption="Remove" type="button" margin="unset 0.5em" name="buttonProceedRoleDelete" on-click="buttonProceedRoleDeleteClick($event, $scope)" iconclass="wi wi-trash"></wm-button>
+                <wm-button class="btn-secondary" caption="Cancel" on-click="closeDialog()" name="buttonCloseDeleteRoleConfrim" iconclass="wi wi-cancel"></wm-button>
             </wm-dialogactions>
         </wm-dialog>
     </wm-view>
